# module26

./: conect.py  create_table.py  database_m26.db  fill_data.py  pyproject.toml  read_sql.py
sql/: create_table.sql  fill_data.sql  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
